<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="User.Register"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome,"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginStart="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register to start your new journey"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp"
        android:layout_marginBottom="@dimen/ten_dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contact" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayout"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConPasswordLayout"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/ten_dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/conPass"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColor="@color/green"/>

    </LinearLayout>




</LinearLayout>