<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="User.Login"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40sp"
        android:text="LIVING PLATES"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome,"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login to continue"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="@dimen/ten_dp"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayout"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="@dimen/ten_dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp"
        android:layout_marginTop="5dp"
        android:text="Forgot Password"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="@dimen/textSize"/>

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:text="@string/register"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:textColor="@color/green"
                />

        </LinearLayout>



</LinearLayout>