<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Admin.AdminEditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp">

        <ImageView
            android:id="@+id/adminProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/thirty_dp"
            android:src="@drawable/akwhitelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="@dimen/txt_height"
            android:layout_marginTop="@dimen/ten_dp"
            app:boxStrokeColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="@dimen/txt_height"
            android:layout_marginTop="@dimen/ten_dp"
            app:boxStrokeColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/contact"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="@dimen/txt_height"
            android:layout_marginTop="@dimen/ten_dp"
            app:boxStrokeColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="@dimen/txt_height"
            android:layout_marginTop="@dimen/ten_dp"
            app:boxStrokeColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/thirty_dp"
            android:gravity="center">

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="Update"
                android:layout_marginRight="@dimen/thirty_dp"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="Cancel"
                android:layout_marginLeft="@dimen/thirty_dp"/>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/admin_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/admin_menu"
        app:itemIconSize="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>