<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="User.ResetPassword"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp"
        android:text="Reset Password"
        android:textSize="32dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your email to reset password"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/thirty_dp"
        android:layout_marginBottom="@dimen/ten_dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="@dimen/ten_dp"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="@dimen/ten_dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConPasswordLayout"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassConPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/conPass"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:backgroundTint="@color/grey"/>
    </LinearLayout>

</LinearLayout>